Migrate gtPlusPlus/tectech SubTag reads to MU.hasFlag